// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainQuoteSummary renders the component with initial props 1`] = `
<div
  class="main-quote-summary__source-row"
  data-testid="main-quote-summary__source-row"
>
  <span
    class="main-quote-summary__source-row-value"
    title="2"
  >
    2
  </span>
  <div
    class=""
  >
    <span
      class="icon-with-fallback__fallback url-icon__fallback main-quote-summary__icon-fallback"
    >
      E
    </span>
  </div>
  <span
    class="main-quote-summary__source-row-symbol"
    title="ETH"
  >
    ETH
  </span>
</div>
`;

exports[`MainQuoteSummary renders the component with initial props 2`] = `
<div
  class="main-quote-summary__destination-row"
>
  <div
    class=""
  >
    <span
      class="icon-with-fallback__fallback url-icon__fallback main-quote-summary__icon-fallback"
    >
      B
    </span>
  </div>
  <span
    class="main-quote-summary__destination-row-symbol"
  >
    BAT
  </span>
</div>
`;

exports[`MainQuoteSummary renders the component with initial props 3`] = `
<div
  class="main-quote-summary__quote-large"
>
  <div>
    <div
      class=""
      style="display: inline;"
      tabindex="0"
      title=""
    >
      <span
        class="main-quote-summary__quote-large-number"
        style="font-size: 50px; line-height: 48px;"
      >
        0.2
      </span>
    </div>
  </div>
</div>
`;

exports[`MainQuoteSummary renders the component with initial props 4`] = `
<div
  class="main-quote-summary__exchange-rate-container"
  data-testid="main-quote-summary__exchange-rate-container"
>
  <div
    class="exchange-rate-display main-quote-summary__exchange-rate-display"
  >
    <div
      class="box exchange-rate-display__quote-rate--no-link box--display-flex box--flex-direction-row box--justify-content-center box--align-items-center box--color-text-default"
      data-testid="exchange-rate-display-quote-rate"
    >
      <span>
        1
      </span>
      <span
        class=""
        data-testid="exchange-rate-display-base-symbol"
      >
        ETH
      </span>
      <span>
        =
      </span>
      <span>
        0.1
      </span>
      <span
        class=""
      >
        BAT
      </span>
    </div>
    <span
      class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-alternative"
      data-testid="exchange-rate-display-switch"
      style="mask-image: url('./images/icons/swap-horizontal.svg'); cursor: pointer;"
      title="Switch"
    />
  </div>
</div>
`;
